Fix safari calculating wrong heights on Copytext

--- a/patterns/ProductList/productList.styl
+++ b/patterns/ProductList/productList.styl
@@ -67,9 +67,7 @@ $breakpoint-huge = 1000px
   margin 0.6rem 0
 
 .product-item__shortdesc
-  display -webkit-box
-  -webkit-line-clamp 3
-  -webkit-box-orient vertical
+  max-height 6rem // 3 lines = 3 * 1.8rem (line-height) + 0.6rem (padding-top)
   overflow hidden
   text-align center
   // Be careful not to override padding-top/bottom from <Copytext>
